--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,13 @@ dependencies:
   flutter:
     sdk: flutter
   record: ^4.4.4
-  path_provider: ^2.0.15
+  path_provider: ^2.1.2
   http: ^0.13.5
   flutter_dotenv: ^5.0.2
   cupertino_icons: ^1.0.2
   audioplayers: ^4.0.0
   camera: ^0.10.5+9
+  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_test:
