--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   audioplayers: ^4.0.0
   camera: ^0.10.5+9
-  video_player: ^2.8.1
+  video_thumbnail: ^0.5.3
 
 dev_dependencies:
   flutter_test:
