--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   audioplayers: ^4.0.0
   camera: ^0.10.5+9
+  ffmpeg_kit_flutter: 6.0.0
+  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_test:
