--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   audioplayers: ^4.0.0
   camera: ^0.10.5+9
-  ffmpeg_kit_flutter: 6.0.0
+  ffmpeg_kit_flutter: ^6.0.3
+  ffmpeg_kit_flutter_platform_interface: ^0.2.1
   video_player: ^2.8.1
 
 dev_dependencies:
