--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   audioplayers: ^4.0.0
   camera: ^0.10.5+9
-  ffmpeg_kit_flutter: ^6.0.3
-  ffmpeg_kit_flutter_platform_interface: ^0.2.1
+  video_compress: ^3.1.2
   video_player: ^2.8.1
   image: ^4.0.17
 
